Enhance documentation with UV package manager details and CLI command overview

--- a/advanced/monitoring.mdx
+++ b/advanced/monitoring.mdx
@@ -7,6 +7,10 @@ description: "Monitoring and metrics collection for Transfer Learning"
 
 Transfer Learning includes comprehensive monitoring and metrics collection capabilities to help you track performance, usage, and potential issues. This page covers how to use and extend these monitoring features.
 
+<Note>
+Monitoring is a critical component of the Transfer Learning CLI, providing real-time insights into processing performance, resource usage, and potential issues. The built-in monitoring system helps ensure reliable operation and optimal performance for video processing pipelines.
+</Note>
+
 ## Logging System
 
 Transfer Learning uses a structured logging system that records information about operations, errors, and performance metrics.
