--- a/cli/overview.mdx
+++ b/cli/overview.mdx
@@ -18,31 +18,42 @@ transfer-learning [command] [arguments] [options]
 ## Available Commands
 
 <CardGroup cols={2}>
-  <Card title="process-video" icon="film" color="#4f46e5" href="#process-video">
+  <Card title="process-video" icon="film" color="#4f46e5" href="/cli/process-video">
     Process a local video file and extract content
   </Card>
-  <Card title="generate-guide" icon="book" color="#0ea5e9" href="#generate-guide">
+  <Card title="generate-guide" icon="book" color="#0ea5e9" href="/cli/generate-guide">
     Generate a step-by-step guide from processed video data
   </Card>
-  <Card title="process-youtube" icon="youtube" color="#ef4444" href="#process-youtube">
+  <Card title="process-youtube" icon="youtube" color="#ef4444" href="/cli/process-youtube">
     Process a YouTube video and extract content
   </Card>
-  <Card title="youtube-guide" icon="video" color="#f97316" href="#youtube-guide">
+  <Card title="youtube-guide" icon="video" color="#f97316" href="/cli/youtube-guide">
     Generate a guide directly from a YouTube video
   </Card>
-  <Card title="transcribe" icon="microphone" color="#10b981" href="#transcribe">
+  <Card title="transcribe" icon="microphone" color="#10b981" href="/cli/transcribe">
     Extract transcript from video
   </Card>
-  <Card title="analyze" icon="magnifying-glass" color="#f59e0b" href="#analyze">
+  <Card title="analyze" icon="magnifying-glass" color="#f59e0b" href="/cli/analyze">
     Analyze video content
   </Card>
-  <Card title="download" icon="download" color="#8b5cf6" href="#download">
+  <Card title="download" icon="download" color="#8b5cf6" href="/cli/download">
     Download video from supported platforms
   </Card>
-  <Card title="config" icon="gear" color="#64748b" href="#config">
+  <Card title="config" icon="gear" color="#64748b" href="/cli/utilities#config">
     Configure environment variables and settings
   </Card>
 </CardGroup>
+
+<Note>
+The Transfer Learning CLI provides seven core actions for video processing and guide generation:
+- **Process-video**: Process local video files
+- **Generate Guide**: Create guides from processed local videos
+- **Process Youtube**: Process videos from YouTube
+- **Youtube-guide**: Generate guides directly from YouTube videos
+- **Transcribe**: Extract transcripts from videos
+- **Analyze**: Analyze video content
+- **Download**: Download videos from supported platforms
+</Note>
 
 ## Command Details
 
