--- a/development.mdx
+++ b/development.mdx
@@ -64,6 +64,10 @@ transfer-learning/
     pip install uv
     uv pip install -e ".[dev]"
     ```
+    
+    <Note>
+    Transfer Learning uses UV as the package manager for faster, more reliable dependency management. UV provides significant performance improvements over traditional pip, especially for large dependency trees.
+    </Note>
   </Step>
   <Step title="Set Up Environment Variables">
     Create a `.env` file in the project root directory:
