--- a/introduction.mdx
+++ b/introduction.mdx
@@ -50,11 +50,15 @@ Transfer Learning is designed for a variety of use cases:
 
 Transfer Learning is built with modern tools and technologies:
 
-- **UV Package Manager**: Fast, reliable Python package management
+- **UV Package Manager**: Fast, reliable Python package management with significant performance improvements over traditional pip
 - **Rich CLI Interface**: Beautiful terminal output with progress bars and status indicators
 - **Async Processing**: Efficient handling of I/O-bound operations
 - **OpenAI Integration**: Leveraging GPT-4 Vision for advanced image analysis
 - **Whisper Models**: State-of-the-art audio transcription
+
+<Note>
+Transfer Learning uses UV as its primary package manager, providing faster installation times, more reliable dependency resolution, and improved caching compared to traditional package managers.
+</Note>
 
 ## Getting Started
 
