--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -26,6 +26,10 @@ This guide will help you get started with Transfer Learning, a powerful CLI tool
     ```bash
     pip install uv
     ```
+    
+    <Tip>
+    UV is a modern Python package manager that provides significant performance improvements over traditional pip. Transfer Learning uses UV for faster, more reliable dependency management.
+    </Tip>
   </Step>
   <Step title="Install Dependencies">
     ```bash
