Update CLI documentation with video processing and file management details

--- a/cli/overview.mdx
+++ b/cli/overview.mdx
@@ -307,4 +307,22 @@ Transfer Learning uses the following environment variables:
 - `ENABLE_MONITORING`: Enable or disable monitoring (true/false)
 - `LOG_LEVEL`: Logging level (INFO, DEBUG, WARNING, ERROR)
 
-These can be set in a `.env` file in the project root directory. 
+These can be set in a `.env` file in the project root directory.
+
+# CLI Overview
+
+The Transfer Learning CLI provides a comprehensive set of tools for processing videos and generating step-by-step guides. It features intelligent video handling, automatic compression, and AI-powered analysis.
+
+## Key Features
+
+- **Smart Video Processing**
+  - Automatic size management and compression
+  - Frame extraction at configurable intervals
+  - Support for multiple video formats
+  - Progress tracking and monitoring
+
+- **File Management**
+  - Automatic compression for large files
+  - Quality-preserving size reduction
+  - Temporary file handling
+  - Configurable size limits 
